--- a/src/CouponPost.mxml
+++ b/src/CouponPost.mxml
@@ -3,8 +3,16 @@
 					   xmlns:fx="http://ns.adobe.com/mxml/2009"
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:s="library://ns.adobe.com/flex/spark"
+					   xmlns:view="com.cp.view.*"
 					   >
 	<fx:Declarations>
-		<configuration:MainContextBuilder viewRoot="{this}"/>
+		<configuration:MainContextBuilder viewRoot="{this}" />
 	</fx:Declarations>
+
+	<view:MainView left="0"
+				   right="0"
+				   top="0"
+				   bottom="0"
+				   />
+
 </s:WindowedApplication>
