--- a/src/com/cp/view/MainView.mxml
+++ b/src/com/cp/view/MainView.mxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:Group xmlns:common="com.cp.view.common.*"
+		 xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 >
 	<fx:Declarations>
 	</fx:Declarations>
 
-	<s:Label text="app" />
+	<s:layout>
+		<s:VerticalLayout gap="0" />
+	</s:layout>
+
+	<common:MainHeader />
 </s:Group>
