--- a/src/ResourceBrowser.mxml
+++ b/src/ResourceBrowser.mxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:WindowedApplication backgroundColor="#665544"
-					   xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:WindowedApplication xmlns:fx="http://ns.adobe.com/mxml/2009"
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:s="library://ns.adobe.com/flex/spark"
+					   backgroundColor="#665544"
 					   >
 	<fx:Script>
 		<![CDATA[
@@ -30,10 +30,10 @@
 				height="100%"
 				>
 		<s:Group>
-			<mx:Image id="assets"
-					  source="{sourceSelector.selectedItem.source}"
-					  mouseMove="assets.toolTip = MovieClipUtil.getSymbolName(event.target)"
-					  />
+			<s:SWFLoader id="assets"
+						 source="{sourceSelector.selectedItem.source}"
+						 mouseMove="assets.toolTip = MovieClipUtil.getSymbolName(event.target)"
+						 />
 		</s:Group>
 	</s:Scroller>
 </s:WindowedApplication>
