--- a/src/com/cp/component/PopUpWrapperBase.mxml
+++ b/src/com/cp/component/PopUpWrapperBase.mxml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <popup:PopUpWrapper xmlns:fx="http://ns.adobe.com/mxml/2009"
-                    xmlns:s="library://ns.adobe.com/flex/spark"
-                    xmlns:popup="com.adobe.cairngorm.popup.*"
-                    reuse="true"
-                    modal="true"
-                    center="true"
-                    >
-    <fx:Script>
-        <![CDATA[
-            import mx.resources.IResourceManager;
+					xmlns:s="library://ns.adobe.com/flex/spark"
+					xmlns:popup="com.adobe.cairngorm.popup.*"
+					xmlns:cairngorm="http://ns.adobe.com/cairngorm"
+					center="true"
+					modal="true"
+					reuse="true"
+					>
+	<fx:Script>
+		<![CDATA[
+			import mx.resources.IResourceManager;
 
-            import org.spicefactory.parsley.core.context.Context;
+			import org.spicefactory.parsley.core.context.Context;
 
-            [Bindable]
-            [Inject]
-            public var context:Context;
+			[Bindable]
+			[Inject]
+			public var context:Context;
 
-            [Bindable]
-            [Inject]
-            public var resourceManager:IResourceManager;
-        ]]>
-    </fx:Script>
+			[Bindable]
+			[Inject]
+			public var resourceManager:IResourceManager;
+		]]>
+	</fx:Script>
 
-    <popup:behaviors>
-        <popup:AddPopUpToParsleyContext context="{context}" />
-    </popup:behaviors>
+	<popup:behaviors>
+		<popup:AddPopUpToParsleyContext context="{context}" />
+		<cairngorm:ZoomAndFadeBehavior />
+	</popup:behaviors>
 </popup:PopUpWrapper>
