--- a/src/CouponPost.mxml
+++ b/src/CouponPost.mxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:WindowedApplication backgroundColor="#000000"
-					   showStatusBar="false"
-					   xmlns:configuration="com.cp.configuration.*"
+<s:WindowedApplication xmlns:configuration="com.cp.configuration.*"
 					   xmlns:fx="http://ns.adobe.com/mxml/2009"
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:parsley="http://www.spicefactory.org/parsley"
 					   xmlns:s="library://ns.adobe.com/flex/spark"
 					   xmlns:view="com.cp.view.*"
+					   backgroundColor="#000000"
+					   showStatusBar="false"
 					   >
 
 	<fx:Style source="style/global.css" />
@@ -17,17 +17,16 @@
 		<parsley:Configure />
 	</fx:Declarations>
 
-
-	<s:layout>
-		<s:VerticalLayout gap="0" />
-	</s:layout>
-
-	<view:AdView width="100%"
-				 height="100%"
+	<view:AdView id="adView"
+				 width="100%"
+				 top="0"
+				 bottom="{mainView.height}"
 				 />
 
-	<view:MainView width="100%"
+	<view:MainView id="mainView"
+				   width="100%"
 				   height="1000"
+				   bottom="0"
 				   />
 
 </s:WindowedApplication>
