--- a/src/com/cp/view/category/CategoryList.mxml
+++ b/src/com/cp/view/category/CategoryList.mxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  xmlns:mx="library://ns.adobe.com/flex/mx"
 		  xmlns:category="com.cp.model.category.*"
+		  xmlns:util="com.cp.util.*"
+		  gap="50"
 		  >
 	<fx:Declarations>
 		<s:ArrayCollection id="categories">
@@ -20,6 +22,9 @@
 								 />
 			<category:CategoryVo name="Beauty"
 								 icon="@Embed('/asset/resource.swf#dressGraphic')"
+								 />
+			<category:CategoryVo name="Travel"
+								 icon="@Embed('/asset/resource.swf#towerGraphic')"
 								 />
 			<category:CategoryVo name="Travel"
 								 icon="@Embed('/asset/resource.swf#towerGraphic')"
@@ -43,15 +48,25 @@
 								 icon="@Embed('/asset/resource.swf#towerGraphic')"
 								 />
 		</s:ArrayCollection>
+
+		<util:PagedListCollectionView id="pagedCategories"
+									  pageSize="6"
+									  list="{categories}"
+									  />
 	</fx:Declarations>
 
 	<s:DataGroup width="100%"
 				 height="100%"
-				 dataProvider="{categories}"
+				 dataProvider="{pagedCategories}"
 				 itemRenderer="com.cp.itemRenderer.category.CategoryItemRenderer"
 				 >
 		<s:layout>
-			<s:TileLayout />
+			<s:TileLayout horizontalGap="120"
+						  verticalGap="60"
+						  orientation="columns"
+						  requestedColumnCount="3"
+						  requestedRowCount="2"
+						  />
 		</s:layout>
 	</s:DataGroup>
-</s:VGroup>
+</s:HGroup>
