--- a/src/com/cp/view/MainView.mxml
+++ b/src/com/cp/view/MainView.mxml
@@ -3,16 +3,32 @@
 					  xmlns:fx="http://ns.adobe.com/mxml/2009"
 					  xmlns:mx="library://ns.adobe.com/flex/mx"
 					  xmlns:s="library://ns.adobe.com/flex/spark"
+					  xmlns:view="com.cp.view.*"
 					  styleName="graphic scale appBackground"
 					  >
 
 	<fx:Declarations>
 	</fx:Declarations>
 
+	<s:states>
+		<s:State name="home" />
+		<s:State name="coupon" />
+	</s:states>
+
 	<s:layout>
 		<s:VerticalLayout gap="0" />
 	</s:layout>
 
 	<common:MainHeader />
+
+	<view:HomeView width="100%"
+				   height="100%"
+				   includeIn="home"
+				   />
+
+	<view:CouponView width="100%"
+					 height="100%"
+					 includeIn="coupon"
+					 />
 
 </s:SkinnableContainer>
