--- a/src/com/cp/view/merchant/MerchantPopup.mxml
+++ b/src/com/cp/view/merchant/MerchantPopup.mxml
@@ -3,10 +3,8 @@
 						xmlns:popup="com.cp.component.*"
 						xmlns:s="library://ns.adobe.com/flex/spark"
 						xmlns:common="com.cp.component.common.*"
-						xmlns:category="com.cp.model.category.*"
-						xmlns:util="com.cp.util.*"
-						xmlns:category1="com.cp.itemRenderer.category.*"
-						xmlns:merchant="com.cp.model.merchant.*"
+						xmlns:merchant="com.cp.view.merchant.*"
+						xmlns:model="com.cp.model.merchant.*"
 						center="false"
 						>
 
@@ -16,15 +14,15 @@
 
 
 		<s:ArrayList id="merchantList">
-			<merchant:MerchantVo name="Merchant 1" />
-			<merchant:MerchantVo name="Merchant 2" />
-			<merchant:MerchantVo name="Merchant 3" />
-			<merchant:MerchantVo name="Merchant 4" />
-			<merchant:MerchantVo name="Merchant 5" />
-			<merchant:MerchantVo name="Merchant 6" />
-			<merchant:MerchantVo name="Merchant 7" />
-			<merchant:MerchantVo name="Merchant 8" />
-			<merchant:MerchantVo name="Merchant 9" />
+			<model:MerchantVo name="Merchant 1" />
+			<model:MerchantVo name="Merchant 2" />
+			<model:MerchantVo name="Merchant 3" />
+			<model:MerchantVo name="Merchant 4" />
+			<model:MerchantVo name="Merchant 5" />
+			<model:MerchantVo name="Merchant 6" />
+			<model:MerchantVo name="Merchant 7" />
+			<model:MerchantVo name="Merchant 8" />
+			<model:MerchantVo name="Merchant 9" />
 		</s:ArrayList>
 	</fx:Declarations>
 
@@ -34,9 +32,16 @@
 
 			import mx.core.UIComponent;
 
+			public var dispatch:Function;
+
 			public function show(event:MerchantListEvent):void
 			{
 				open = true;
+			}
+
+			public function hide(event:MerchantListEvent):void
+			{
+				open = false;
 			}
 		]]>
 	</fx:Script>
@@ -46,56 +51,16 @@
 			 >
 		<popup:ModalLayer height="1000"
 						  bottom="0"
-						  color="0x000000"
-						  alpha="0.7"
 						  />
 
-		<s:SkinnableContainer id="content"
-							  left="90"
-							  right="{right}"
-							  top="{top}"
-							  bottom="80"
-							  styleName="graphic scale grayBackground"
-							  >
-			<s:layout>
-				<s:VerticalLayout horizontalAlign="center"
-								  paddingBottom="90"
-								  paddingLeft="130"
-								  paddingRight="130"
-								  paddingTop="90"
-								  gap="50"
-								  />
-			</s:layout>
-
-
-			<s:Scroller width="100%"
-						height="100%"
-						interactionMode="touch"
-						skinClass="com.cp.skin.common.NoBarScroller"
-						>
-				<s:DataGroup height="100%"
-							 dataProvider="{merchantList}"
-							 itemRenderer="com.cp.itemRenderer.merchant.MerchantItemRenderer"
-							 >
-					<s:layout>
-						<s:TileLayout horizontalGap="120"
-									  paddingTop="10"
-									  verticalGap="60"
-									  orientation="columns"
-									  requestedColumnCount="3"
-									  requestedRowCount="2"
-									  />
-					</s:layout>
-				</s:DataGroup>
-			</s:Scroller>
-
-			<!--
-			<s:List dataProvider="{pages}"
-					selectedIndex="{pages.selectedIndex}"
-					skinClass="com.cp.skin.common.PageListSkin"
-					/>
-			-->
-		</s:SkinnableContainer>
+		<merchant:MerchantList id="content"
+							   left="90"
+							   right="{right}"
+							   top="{top}"
+							   bottom="80"
+							   merchantList="{merchantList}"
+							   selectMerchant="dispatch(event)"
+							   />
 
 		<common:PopupCloseButton horizontalCenter="{UIComponent(parent).width/2 - right}"
 								 verticalCenter="{-UIComponent(parent).height/2 + top}"
