--- a/src/com/cp/view/category/CategoryList.mxml
+++ b/src/com/cp/view/category/CategoryList.mxml
@@ -9,7 +9,7 @@
 	</fx:Metadata>
 
 	<fx:Declarations>
-		<s:ArrayList id="categoryList" />
+		<s:ArrayCollection id="categoryList" />
 	</fx:Declarations>
 
 	<s:layout>
