--- a/src/com/cp/itemRenderer/category/CategoryItemRenderer.mxml
+++ b/src/com/cp/itemRenderer/category/CategoryItemRenderer.mxml
@@ -37,16 +37,16 @@
 						  touchBegin="currentState = 'down'"
 						  touchEnd="currentState = 'normal'"
 						  >
-		<s:Image horizontalCenter="0"
-				 verticalCenter="0"
-				 source="{category.icon}"
-				 />
-		<s:filters>
-			<s:DropShadowFilter blurX="20"
-								blurY="20"
-								distance="0"
-								/>
-		</s:filters>
+		<s:BitmapImage horizontalCenter="0"
+					   verticalCenter="0"
+					   source="{category.icon}"
+					   />
+		<!--	<s:filters>
+				<s:DropShadowFilter blurX="20"
+									blurY="20"
+									distance="0"
+									/>
+			</s:filters>-->
 	</s:SkinnableContainer>
 
 	<s:Label fontSize="40"
